Add initial HATEOAS support
